<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/item_events" />

        <item
            android:id="@+id/nav_ngos"
            android:icon="@drawable/ic_checked"
            android:title="@string/ngos"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/googleg_standard_color_18"
            android:title="@string/item_profile" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/common_google_signin_btn_text_light"
            android:title="@string/item_news" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/common_google_signin_btn_icon_light_focused"
            android:title="@string/item_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/common_google_signin_btn_icon_light_focused"
            android:title="@string/item_about"/>

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/item_log_out" />


    </group>
</menu>